swim_form/src/tests/derive/attributes/invalid_bigint_attr.stderr
error[E0308]: mismatched types
  --> $DIR/invalid_bigint_attr.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ expected `i32`, found struct `num_bigint::bigint::BigInt`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/invalid_bigint_attr.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ expected `i32`, found struct `num_bigint::bigint::BigInt`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/invalid_bigint_attr.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ expected struct `num_bigint::bigint::BigInt`, found `i32`
   |
   = note: expected reference `&num_bigint::bigint::BigInt`
              found reference `&'__a i32`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
